# mcp-usability-test

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  pyproject.toml
scenarios/: cannibalization_analysis.yaml  cross_client_analysis.yaml  customer_segment_breakdown.yaml  data_anomaly_diagnosis.yaml  error_recovery.yaml  fading_lift_over_time.yaml  hierarchy_product_lookup.yaml  lift_drivers.yaml  lift_explorer_deep_dive.yaml  match_quality_pair_correlation.yaml  negative_result_investigation.yaml  portfolio_monitoring.yaml  result_interpretation.yaml  retail_media_short_test.yaml  stakeholder_report.yaml  store_availability.yaml
scenarios/floor_and_decor/: fnd_2026_design_trends.yaml  fnd_cannibalization_audit.yaml  fnd_financing_offer_ab.yaml  fnd_pro_diy_segmentation.yaml  fnd_regional_recovery_signal.yaml  fnd_smaller_project_pivot.yaml  fnd_test_program_intensity.yaml  fnd_vendor_day_b2b_ltv.yaml
scenarios/general/: ab_test_analysis.yaml  basic_exploration.yaml  product_keyword_search.yaml  result_interpretation.yaml  rollout_analysis.yaml  rollout_planning.yaml  rollout_prediction.yaml  store_comparison.yaml  store_lookup_by_id.yaml
src/: auth.py  context.py  display.py  llm_client.py  main.py  mcp_bridge.py  observations.py  orchestrator.py  prompts.py  state.py
